remove the vertical-alignment 'fix' on all types of 'media' (images etc)
This is because the default value (`baseline`) is perfectly good and resulted in overwriting the value more often than not.

--- a/assets/src/scss/components/_embedded-content.scss
+++ b/assets/src/scss/components/_embedded-content.scss
@@ -11,20 +11,9 @@ img {
 }
 
 // Images, Flash & video
-img, object, embed, video {
-	max-width: 100%;
-}
-
-/**
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-audio,
-canvas,
-iframe,
 img,
-svg,
+object,
+embed,
 video {
-	vertical-align: middle;
+	max-width: 100%;
 }
